[css] fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ html, body {
 #app {
 	position: absolute;
 	height: max-content;
-	width: max-content
+	width: 100%;
 }
 
 .info-banner {
@@ -64,6 +64,8 @@ html, body {
 
 .cards {
 	display: flex;
+	width: 100%;
+	overflow-x: hidden;
 }
 
 .subcards {
